(refactor/fix) Cleanup template code. Fix page rendering too small and empty pages. Decrease font size.

--- a/template/styles/pdf.css
+++ b/template/styles/pdf.css
@@ -1,13 +1,5 @@
 @import "fonts/inconsolata.css";
 
-html{
-  /* Workaround for PhantomJS 2.0 issue, see https://github.com/ariya/phantomjs/issues/12685 */
-  transform-origin: 0 0;
-  -webkit-transform-origin: 0 0;
-  transform: scale(0.75);
-  -webkit-transform: scale(0.75);
-}
-
 html, body {
   padding: 0;
   margin: 0;
@@ -16,6 +8,7 @@ html, body {
 body {
   padding: 1cm 4.5cm 1cm 1cm;
   font-family: sans-serif;
+  font-size: 11pt;
 }
 
 h1 {
@@ -37,6 +30,7 @@ pre, code {
   min-width: 10px!important;
   height: 5px;
 }
+
 .warning {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6 3" enable-background="new 0 0 6 3" height="3" width="6"><g fill="orange"><polygon points="5.5,0 2.5,3 1.1,3 4.1,0"/><polygon points="4,0 6,2 6,0.6 5.4,0"/><polygon points="0,2 1,3 2.4,3 0,0.6"/></g></svg>') bottom left repeat-x;
   display: inline-block;
@@ -44,7 +38,8 @@ pre, code {
   min-width: 10px!important;
   height: 5px;
 }
-svg:not(.correction) {
+
+#output svg {
   border: 1px solid #999;
   overflow: hidden;
   width: 100%;
@@ -76,18 +71,22 @@ svg:not(.correction) {
   fill: none;
 }
 
-canvas {
-  display: none;
+#correction, #highlighter {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-svg.correction {
+#correction svg {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 42;
+  clear: none;
 }
 
-svg.correction.highlighter {
-  stroke-opacity:0.4;
+#highlighter svg {
   z-index: 41;
+  stroke-opacity: 0.4;
+  clear: none;
 }
